# signal-graph

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/adr/: ADR-0001-cli-first-provenance-workflow.md  ADR-0002-sqlite-plus-neo4j-separation.md  ADR-0003-agent-skill-and-command-order.md
docs/architecture/: system-overview.md
docs/examples/: scoring-policy.example.toml
docs/overview/: product.md
docs/plans/: 2026-03-19-neo4j-ai-trading-design.md  2026-03-19-neo4j-ai-trading-mvp.md
docs/prompts/: signal-graph-analyst-prompt-pack.md
docs/runbooks/: agent-usage.md  analyst-agent-guide.md  local-development.md  operator-guide.md  runnable-smoke-test.md
skills/signal-graph/: SKILL.md
skills/trade-graph/: SKILL.md
src/signal_graph/: __init__.py  config.py
src/trade_graph/: __init__.py  config.py
src/trade_graph/cli/: init.py  (+10 more)
tests/cli/: test_doctor_command.py  test_explain_command.py  test_fetch_command.py  test_ingest_command.py  test_init_command.py  test_make_targets.py  test_normalize_command.py  test_rank_command.py  test_research_command.py  test_submit_command.py  test_version_command.py
tests/config/: test_config_loading.py
tests/docs/: test_docker_compose.py  test_skill_references.py
tests/e2e/: test_compose_backed_flow.py  test_manual_event_flow.py
tests/graph/: test_client.py  test_schema.py
tests/models/: test_event_candidate.py
tests/services/: test_scoring_policy.py  test_scoring_policy_config.py
tests/storage/: test_sqlite_store.py
(+51 files in other folders)
