[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal-graph"
version = "0.1.0"
description = "CLI scaffold for signal-graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12,<1",
  "pydantic>=2.7,<3",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9",
  "ty==0.0.23",
]

[project.scripts]
signal-graph = "signal_graph.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
